--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "hii-react",
   "private": true,
   "dependencies": {
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "react": "~0.13.3"
   }
 }
