--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,12 @@
 {
-  "name": "hii-react",
+  "name": "hii-react2016",
   "private": true,
   "dependencies": {
     "jquery": "~2.1.1",
-    "react": "~0.13.3"
+    "react": "^0.14.7"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^2.4.5"
   }
 }
