--- a/package.json
+++ b/package.json
@@ -1,32 +1,51 @@
 {
   "private": true,
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=0.12.0"
   },
   "devDependencies": {
-    "autoprefixer-core": "^4.0.2",
-    "browser-sync": "^1.8.2",
-    "browserify": "^10.2.4",
+    "babel-core": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browser-sync": "^2.2.1",
+    "browserify": "^13.0.0",
     "del": "^1.1.1",
-    "gulp": "^3.6.0",
-    "gulp-cache": "^0.2.2",
-    "gulp-csso": "^0.2.6",
-    "gulp-if": "^1.2.1",
-    "gulp-imagemin": "^2.0.0",
-    "gulp-jshint": "^1.5.3",
-    "gulp-load-plugins": "^0.8.0",
-    "gulp-minify-html": "^0.1.6",
-    "gulp-postcss": "^3.0.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-size": "^1.1.0",
-    "gulp-sourcemaps": "^1.3.0",
-    "gulp-uglify": "^1.0.1",
-    "gulp-useref": "^1.0.2",
-    "jshint-stylish": "^1.0.0",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.1",
+    "gulp-babel": "^6.1.1",
+    "gulp-cache": "^0.4.2",
+    "gulp-cssnano": "^2.0.0",
+    "gulp-eslint": "^0.13.2",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.0",
+    "gulp-size": "^1.2.1",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
-    "opn": "^1.0.0",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0",
-    "wiredep": "^2.0.0"
+    "wiredep": "^2.2.2"
+  },
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "node": true,
+      "browser": true
+    },
+    "rules": {
+      "quotes": [
+        2,
+        "single"
+      ]
+    }
+  },
+  "dependencies": {
+    "react": "^0.14.7"
   }
 }
